package org.example;

import org.example.controller.Controller;

public class Mylab4 {
    public static void main(String[] args) {
        new Controller();
    }
}